--- a/app/templates/daily reward page/daily.html
+++ b/app/templates/daily reward page/daily.html
@@ -38,7 +38,7 @@
         </div>
         
         {% if error %}
-            <p>{{ error }}</p>
+            <p class="error">{{ error }}</p>
         {% endif %}
         
         {% if can_collect_reward %}
@@ -53,6 +53,5 @@
 
         {% include 'menu.html' %}
     </div>
-
 </body>
 </html>
