--- a/app/templates/home page/home.html
+++ b/app/templates/home page/home.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -46,11 +47,11 @@
         <div class="levels">
             <p class="name">{{ nickname }}</p>
             <div class="level">
-                <div class="grade" style="width: {{ progress }}%;"></div>
+                <div class="grade" style="width: {{ progress }}%;" id="progress-bar"></div>
             </div>
             <div class="number">
                 <a href="/level">
-                    <p class="num">LEVEL <span class="userLevel">{{ level }}</span>/<span class="fullLevel">Unlimited</span></p>
+                    <p class="num">LEVEL <span class="userLevel" id="user-level">{{ level }}</span>/<span class="fullLevel">Unlimited</span></p>
                 </a>
             </div>
         </div>
@@ -63,15 +64,13 @@
         <div class="circle c3"></div>
         <!----------------------------------------------- page items -------------------------------------------------->
         <div class="coins">
-            <img src="{{ url_for('static', filename='img/Untitled-2.png') }}" alt="coin">
-            <h2>{{ coins | format_thousands }}</h2>
+            <img src="{{ url_for('static', filename='img/Untitled-2.png') }}" alt="coin" id="coin-image">
+            <h2 id="coin-count">{{ coins | format_thousands }}</h2>
         </div>
         <div class="pages">
             <span class="page">
                 <span class="dailyCode">
-                    <a href=/daily-reward>
-                    DAILY REWARD
-                    </a>
+                    <a href=/daily-reward>DAILY REWARD</a>
                 </span>
                 <span>
                     <img src="{{ url_for('static', filename='img/Line 1.png') }}" alt="">
@@ -81,57 +80,28 @@
                 </span>
             </span>
         </div>
-        <div class="select">
-            <div class="selec active" id="selec1">
-                <span class="butt " id="butt1">OFFLINE</span>
-            </div>
-            <div class="selec" id="selec2">
-                <span class="butt" id="butt2">ONLINE</span>
-            </div>
-            <div class="selec" id="selec3">
-                <span class="butt" id="butt3">PODCAST</span>
-            </div>
-        </div>
-        <div>
-            <img src="{{ url_for('static', filename='img/music.png') }}" alt="">
-        </div>
-        <h5 class="songName">BLACK IN BLACK</h5>
-        <h6 class="songSinger">AC-DC</h6>
-        <div class="range">
-            <span>00:29</span>
-            <span>
-                <input type="range" name="range" id="range" placeholder="r">
+        <div id="select-folder-container">
+            <span class="dailyCode">
+                <button id="select-folder">Select Folder</button>
             </span>
-            <span>03:10</span>
         </div>
-        <div class="music">
-            <i class="bi bi-shuffle" onclick="change()" id="type"></i>
-            <i class="bi bi-skip-backward"></i>
-            <i class="bi bi-play-fill" id="play" onclick="play()"></i>
-            <i class="bi bi-skip-forward"></i>
-            <i class="bi bi-heart" id="heart" onclick="heart()"></i>
+        <div id="music-container" style="display: none;">
+            <img id="cover-image" src="{{ url_for('static', filename='img/music.png') }}" alt="Music Cover">
+            <h5 class="songName" id="song-name">BLACK IN BLACK</h5>
+            <h6 class="songSinger" id="song-singer">AC-DC</h6>
+            <div class="range">
+                <span id="current-time">00:00</span>
+                <input type="range" name="range" id="range">
+                <span id="total-time">03:10</span>
+            </div>
+            <div class="music">
+                <i class="bi bi-shuffle" onclick="change()" id="type"></i>
+                <i class="bi bi-skip-backward"></i>
+                <i class="bi bi-play-fill" id="play" onclick="play()"></i>
+                <i class="bi bi-skip-forward"></i>
+                <i class="bi bi-heart" id="heart" onclick="heart()"></i>
+            </div>
         </div>
-        <!-- <div class="fix">
-            <div class="time">
-                <span>
-                    <p>
-                        <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M10 5C10 7.76142 7.76142 10 5 10C2.23858 10 0 7.76142 0 5C0 2.23858 2.23858 0 5 0C7.76142 0 10 2.23858 10 5Z"
-                                fill="#FFA619" />
-                            <path
-                                d="M6.91309 4.71289C7.04492 4.75391 7.16504 4.8125 7.27344 4.88867C7.38184 4.96484 7.47412 5.06299 7.55029 5.18311C7.62646 5.30029 7.68506 5.43945 7.72607 5.60059C7.76709 5.76172 7.7876 5.94629 7.7876 6.1543V6.4707C7.7876 7.49023 7.27783 8 6.2583 8H2.80859V1.69824H6.07812C7.09766 1.69824 7.60742 2.20947 7.60742 3.23193V3.34619C7.60742 3.70068 7.55029 3.99072 7.43604 4.21631C7.32471 4.43896 7.15039 4.60449 6.91309 4.71289ZM3.69189 5.25342V7.1167H6.23193C6.46924 7.1167 6.64062 7.06104 6.74609 6.94971C6.85156 6.83838 6.9043 6.66406 6.9043 6.42676V5.93896C6.9043 5.69873 6.85156 5.52441 6.74609 5.41602C6.64062 5.30762 6.46924 5.25342 6.23193 5.25342H3.69189ZM3.69189 2.58154V4.37451H6.11328C6.33008 4.36572 6.48535 4.30713 6.5791 4.19873C6.67578 4.0874 6.72412 3.91748 6.72412 3.68896V3.27588C6.72412 3.03564 6.67139 2.85986 6.56592 2.74854C6.46045 2.63721 6.28906 2.58154 6.05176 2.58154H3.69189Z"
-                                fill="black" />
-                        </svg>
-                        <span>{{ profit }}</span>
-                    </p>
-                </span>
-                <span>00:02:13</span>
-            </div>
-            <div class="timeRange">
-                <div class="timeRange2"></div>
-            </div>
-        </div> -->
         <br><br><br><br>
         <!----------------------------------menu -------------------------------------->
         {% include 'menu.html' %}
