--- a/app/templates/input page/input.html
+++ b/app/templates/input page/input.html
@@ -14,26 +14,26 @@
 
 <body>
     <div class="main">
-
         <div class="background">
             <div class="logo">
                 <img src="{{ url_for('static', filename='img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg') }}" alt="logo">
             </div>
             <div><span class="bot">BOT NAME</span></div>
-            <form method="post" action="{{ url_for('nickname') }}">
+            <form method="post" action="{{ url_for('nickname', tg_id=request.args.get('tg_id'), username=request.args.get('username')) }}">
                 <div class="input">
-                <input type="text" placeholder="ENTER YOUR USERNAME" name="nickname" id="input">
-            </div>
-            <div class="ok">
-                <button type="submit">OK</button>
-            </div>
-        </form>
-            
+                    <input type="text" placeholder="ENTER YOUR USERNAME" name="nickname" id="input" required>
+                </div>
+                <div class="ok">
+                    <button type="submit">OK</button>
+                </div>
+                {% if error %}
+                <p style="color: red;">{{ error }}</p>
+                {% endif %}
+            </form>
         </div>
         <div class="circle c1"></div>
         <div class="circle c2"></div>
         <div class="circle c3"></div>
-
     </div>
 </body>
 
