--- a/app/templates/nfts page/nfts.html
+++ b/app/templates/nfts page/nfts.html
@@ -33,7 +33,7 @@
                                     fill="black" />
                             </svg>
                             +
-                            <span>{{profit}}</span>
+                            <span>{{ profit }}</span>
                             <span>k</span>
                         </p>
                     </div>
@@ -78,12 +78,13 @@
         </div>
         <div class="nfts" id="nft-list">
             {% for nft in nfts %}
-            <div class="nft" data-price="{{ nft.price }}" data-vip="{{ 'vip' if nft.is_vip else '' }}">
+            <div class="nft" data-id="{{ nft.id }}" data-price="{{ nft.price }}" data-vip="{{ 'vip' if nft.is_vip else '' }}">
                 <div class="txt">
                     <img src="{{ url_for('static', filename='uploads/nfts/' + nft.image) }}" alt="{{ nft.name }}">
                     <div>
                         <span class="nftName">{{ nft.name }}</span>
                         <div class="description">{{ nft.description }}</div>
+                        <div class="owner">Owned by: {{ nft.owner.nickname if nft.owner else 'None' }}</div> <!-- Owner display -->
                     </div>
                 </div>
                 <div class="coin">
@@ -99,7 +100,7 @@
             </div>
             {% endfor %}
         </div>
-        
+
         <!-- Modal Structure -->
         <div id="nft-modal" class="modal">
             <div class="modal-content">
@@ -109,7 +110,7 @@
                 <p id="description"></p>
                 <p>Profit: <span id="profit"></span></p>
                 <p>Price: <span id="coin"></span> Coins</p>
-                <button type="button" class="modal-button">Go Ahead</button>
+                <button type="button" class="modal-button" onclick="purchaseNFT()">Go Ahead</button>
             </div>
         </div>
         <div class="menu">
@@ -147,6 +148,9 @@
             document.getElementById('coin').textContent = coin;
             document.querySelector('.modal-nft-image').setAttribute('src', imageSrc); // Set the image source
 
+            // Store the NFT ID on the button
+            document.querySelector('.modal-button').dataset.nftId = nft.dataset.id;
+
             // Show the modal
             modal.style.display = 'block';
         }
@@ -162,6 +166,23 @@
             if (event.target == modal) {
                 modal.style.display = "none";
             }
+        }
+
+        // Function to purchase the NFT
+        function purchaseNFT() {
+            const nftId = document.querySelector('.modal-button').dataset.nftId;
+
+            const formData = new FormData();
+            formData.append('nft_id', nftId);
+
+            fetch('{{ url_for("purchase_nft") }}', {
+                method: 'POST',
+                body: formData,
+            })
+            .then(response => response.text())
+            .then(data => {
+                location.reload();  // Reload the page to update the NFT ownership and user coins
+            });
         }
 
         // Function to filter and display only VIP NFTs
