big update for fixing bugs and this shit

--- a/template/input page/input.css
+++ b/template/input page/input.css
@@ -32,31 +32,31 @@ body {
     width: 200px;
 
 }
-.loading {
-    font-size: 50PX;
-    color: var(--light-green);
-    animation: fade 1.5s infinite;
+.ok button {
+    font-size: 20PX;
+    color: var(--white);
     font-family: 'aldrich', sans-serif;
- 
-    margin-top: 270px;
+    padding:17px 40px ;
+    margin-top: 140px;
    text-align: center;
-   
+   border-radius: 12px;
+   background-color: var(--light-green);
+   border: none;
+
 }
 
-@keyframes fade {
-
-    0%,
-    100% {
-        opacity: 0.5;
-    }
-
-    50% {
-        opacity: 1;
-    }
+.ok button:hover{
+    background-color:var(--blue) ;
 }
-
-
-
+#triangle {
+    clip-path: polygon(0 0, 100% 100%, 0 100%);
+    width: 100vh;
+    height: 70vh;
+    background-color: var(--purple);
+    bottom: 0px;
+    position: absolute;
+    left: 0;
+}
 
 .main {
     background-image: url(/img/TV\ -\ 1.png) ;
@@ -103,8 +103,15 @@ body {
     -webkit-text-fill-color: transparent;
 }
 
-@media (max-width: 768px ){
-    .loading{
-        font-size: 30PX;
-    }
+#input{
+    padding: 10px;
+    outline: none;
+    background: #ffffff42;
+    color: var(--white);
+    border: 1px solid var(--white);
+    border-radius: 8px;
+    font-family: 'aldrich';
+    width: 250px;
+    margin-top: 60px;
+    font-size: 18px;
 }
