--- a/template/input page/input.html
+++ b/template/input page/input.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/input.css') }}">
+    <link rel="stylesheet" href="/input page/input.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,15 +17,12 @@
 
         <div class="background">
             <div class="logo">
-                <img src="{{ url_for('static', filename='img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg') }}" alt="logo">
+                <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
             </div>
-            <div><span class="bot">ADMIN PANEL LOGIN</span></div>
-
-        <form method="POST" action="{{ url_for('admin_login') }}">
+            <div><span class="bot">BOT NAME</span></div>
+            <form action="/home page/home.html">
                 <div class="input">
-                <input type="text" placeholder="ENTER YOUR USERNAME" name="username" id="input" required>
-            </div>            <div class="input">
-                <input type="text" placeholder="ENTER YOUR PASSWORD" name="password" id="input" required>
+                <input type="text" placeholder="ENTER YOUR USERNAME" id="input">
             </div>
             <div class="ok">
                 <button type="submit">OK</button>
