--- a/template/daily reward/daily.html
+++ b/template/daily reward/daily.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/daily reward/daily.css">
+    <link rel="stylesheet" href="../daily reward/daily.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
+            <img src="../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
         </div>
     </div>
     <div class="main">
@@ -38,7 +38,7 @@
                     <span class="item daynum">
                         DAY <span>1</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">100</span>
                 </span>
             </div>
@@ -47,7 +47,7 @@
                     <span class="item daynum">
                         DAY <span>2</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">500</span>
                 </span>
             </div>
@@ -56,7 +56,7 @@
                     <span class="item daynum">
                         DAY <span>3</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">1k</span>
                 </span>
             </div>
@@ -65,7 +65,7 @@
                     <span class="item daynum">
                         DAY <span>4</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">2k</span>
                 </span>
             </div>
@@ -74,7 +74,7 @@
                     <span class="item daynum">
                         DAY <span>5</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">5k</span>
                 </span>
             </div>
@@ -83,7 +83,7 @@
                     <span class="item daynum">
                         DAY <span>6</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">10k</span>
                 </span>
             </div>
@@ -92,7 +92,7 @@
                     <span class="item daynum">
                         DAY <span>7</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">100k</span>
                 </span>
             </div>
@@ -101,7 +101,7 @@
                     <span class="item daynum">
                         DAY <span>8</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">200k</span>
                 </span>
             </div>
@@ -110,7 +110,7 @@
                     <span class="item daynum">
                         DAY <span>9</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">500k</span>
                 </span>
             </div>
@@ -119,7 +119,7 @@
                     <span class="item daynum">
                         DAY <span>10</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">1m</span>
                 </span>
             </div>
@@ -128,7 +128,7 @@
                     <span class="item daynum">
                         DAY <span>11</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">2m</span>
                 </span>
             </div>
@@ -137,7 +137,7 @@
                     <span class="item daynum">
                         DAY <span>12</span>
                     </span>
-                    <span class="item coin"><img src="/img/Untitled-2.png" alt=""></span>
+                    <span class="item coin"><img src="../img/Untitled-2.png" alt=""></span>
                     <span class="item number">5m</span>
                 </span>
             </div>
