--- a/template/input page/input.html
+++ b/template/input page/input.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/input page/input.css">
+    <link rel="stylesheet" href="../input page/input.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
 
         <div class="background">
             <div class="logo">
-                <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
+                <img src="../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
             </div>
             <div><span class="bot">BOT NAME</span></div>
             <form action="/home page/home.html">
