--- a/template/invite page/invite.html
+++ b/template/invite page/invite.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/invite page/invite.css">
+    <link rel="stylesheet" href="../invite page/invite.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
+            <img src="../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
         </div>
     </div>
     <div class="main">
@@ -31,7 +31,7 @@
         <div id="title"><span class="bot"> INVITES</span></div>
         <P class="P">INVITE YOUR FRIEND AND SHARE THIS BOT FOR MORE MEMBERS INTRODUCE US TO YOUR FRIEND.</P>
         <h3>YOUR INVITE LINK</h3>
-        <button class="open" type="submit" onclick="copyCode()"> <span id="invitLink">t.me//telegramchannel-download.com</span><span id="copyButton"  class="clipboard"><img src="/img/clipboard.png" alt="copy"></span></button>
+        <button class="open" type="submit" onclick="copyCode()"> <span id="invitLink">t.me//telegramchannel-download.com</span><span id="copyButton"  class="clipboard"><img src="../img/clipboard.png" alt="copy"></span></button>
         <p id="copyMessage" class="copy-message"></p>
 
         <p class="P">YOUR FRIENDS</p>
@@ -72,7 +72,7 @@
             </div>
         </div>
     </div>
-    <script src="/invite page/invite.js"></script>
+    <script src="../invite page/invite.js"></script>
 </body>
 
 </html>
