--- a/template/level page/level.html
+++ b/template/level page/level.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/level page/level.css">
+    <link rel="stylesheet" href="../level page/level.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
         <div class="circle c2"></div>
         <div class="circle c3"></div>
         <div class="logo">
-            <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="">
+            <img src="..../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="">
         </div>
 
         <div class="level">
@@ -47,7 +47,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -57,7 +57,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -67,7 +67,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -77,7 +77,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -87,7 +87,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -97,7 +97,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -107,7 +107,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -117,7 +117,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -127,7 +127,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -137,7 +137,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -147,7 +147,7 @@
                 <span class="detail">
                     <p class="name">luna</p>
                     <div>
-                        <span><img src="/img/Vector.png" alt=""></span>
+                        <span><img src="../img/Vector.png" alt=""></span>
                         <span>12,000</span>
                     </div>
                 </span>
@@ -161,7 +161,7 @@
         <span class="detail">
             <p class="name">linda</p>
             <div>
-                <span><img src="/img/Vector.png" alt=""></span>
+                <span><img src="../img/Vector.png" alt=""></span>
                 <span>12,000</span>
             </div>
         </span>
