--- a/template/nfts page/nfts.html
+++ b/template/nfts page/nfts.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/nfts page/nfts.css">
+    <link rel="stylesheet" href="../nfts page/nfts.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
         <div class="circle c3"></div>
         <!----------------------------------------------- page items -------------------------------------------------->
         <div class="fixing">
-            <form action="/daily reward/daily.html">
+            <form action="../daily reward/daily.html">
                 <div class="input">
                     <input type="text" placeholder="SEARCH..." id="input">
                 </div>
@@ -88,7 +88,7 @@
         <div class="nfts">
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -110,14 +110,14 @@
                             100
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -139,14 +139,14 @@
                             500
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -168,14 +168,14 @@
                             300
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -197,14 +197,14 @@
                             1m
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -226,14 +226,14 @@
                             800
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -255,14 +255,14 @@
                             50
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -284,14 +284,14 @@
                             50
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -313,14 +313,14 @@
                             1k
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
             </div>
             <div class="nft">
                 <div class="txt">
-                    <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
+                    <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="">
                     <div>
                         <span class="nftName">
                             NFT NAME
@@ -342,7 +342,7 @@
                             50
                         </span>
                         <span>
-                            <img src="/img/Untitled-2.png" alt="">
+                            <img src="../img/Untitled-2.png" alt="">
                         </span>
                     </button>
                 </div>
@@ -352,7 +352,7 @@
         <div id="nft-modal" class="modal">
             <div class="modal-content">
                 <span class="close" onclick="closeModalname()">&times;</span>
-                <img src="/img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="NFT" class="modal-nft-image">
+                <img src="../img/prize-box-mother-s-day-3d-illustration-png 1.png" alt="NFT" class="modal-nft-image">
                 <h3 id="modal-name"></h3>
                 <p id="description"></p>
                 <p>Profit:
@@ -377,7 +377,7 @@
             </div>
         </div>
     </div>
-    <script src="/nfts page/nfts.js"></script>
+    <script src="../nfts page/nfts.js"></script>
 </body>
 
 </html>
