--- a/template/tasks/tasks.html
+++ b/template/tasks/tasks.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/tasks/tasks.css">
+    <link rel="stylesheet" href="../tasks/tasks.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
+            <img src="../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
         </div>
     </div>
     <div class="main">
@@ -41,41 +41,20 @@
 
         <div id="task">
             <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
+                <span><img src="../img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
                 <span class="txt">Lorem ipsum dolor sit amet</span>
                 <span><a href="" class="check">CHECK</a></span>
             </div>
             <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
+                <span><img src="../img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
                 <span class="txt">Lorem ipsum dolor sit amet</span>
                 <span><a href="" class="check">CHECK</a></span>
             </div>
             <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
+                <span><img src="../img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
                 <span class="txt">Lorem ipsum dolor sit amet</span>
                 <span><a href="" class="check">CHECK</a></span>
             </div>
-            <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
-                <span class="txt">Lorem ipsum dolor sit amet</span>
-                <span><a href="" class="check">CHECK</a></span>
-            </div>
-            <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
-                <span class="txt">Lorem ipsum dolor sit amet</span>
-                <span><a href="" class="check">CHECK</a></span>
-            </div>
-            <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
-                <span class="txt">Lorem ipsum dolor sit amet</span>
-                <span><a href="" class="check">CHECK</a></span>
-            </div>
-            <div class="link">
-                <span><img src="/img/telegram-logo-telegram-logo-transparent-telegram-icon-transparent-free-free-png 2.png" alt=""></span>
-                <span class="txt">Lorem ipsum dolor sit amet</span>
-                <span><a href="" class="check">CHECK</a></span>
-            </div>
-
             
         </div>
         <br>
@@ -84,15 +63,15 @@
         <div class="items">
             <ul>
            <li> <a href="" title="tasks"><i class="bi bi-patch-check-fill"></i></a></li>
-           <li> <a href="/nfts page/nfts.html" title="nft"><i class="bi bi-ui-checks-grid"></i></a></li>
-           <li><a href="/home page/home.html" title="home"><i class="bi bi-house-fill"></i></a> </li>
-           <li><a href="/invite page/invite.html" title="invits"><i class="bi bi-people-fill"></i></a></li>
-           <li><a href="/wallet page/wallet.html" title="wallet" ><i class="bi bi-wallet-fill"></i></a></li>
+           <li> <a href="../nfts page/nfts.html" title="nft"><i class="bi bi-ui-checks-grid"></i></a></li>
+           <li><a href="../home page/home.html" title="home"><i class="bi bi-house-fill"></i></a> </li>
+           <li><a href="../invite page/invite.html" title="invits"><i class="bi bi-people-fill"></i></a></li>
+           <li><a href="../wallet page/wallet.html" title="wallet" ><i class="bi bi-wallet-fill"></i></a></li>
         </ul>
         </div>
     </div>
     </div>
-   <script src="/tasks/task.js"></script>
+   <script src="../tasks/task.js"></script>
 </body>
 
 </html>
