--- a/template/wallet page/wallet.css
+++ b/template/wallet page/wallet.css
@@ -1,16 +1,14 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'aldrich';
+    font-family: 'Aldrich', sans-serif;
 }
 
 body {
     background-color: #060022;
     color: var(--white);
-    font-family: 'Aldrich';
     overflow-y: hidden;
     text-align: center;
-   
 }
 
 :root {
@@ -23,46 +21,36 @@ body {
     --white: #faf9f6;
 }
 
-.aldrich-regular {
-    font-family: "Aldrich", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
 .logo img {
     width: 50px;
     position: absolute;
     right: 0;
-    margin-top: 0;
 }
-.nav{
+
+.nav {
     display: flex;
 }
 
 .main {
-
     height: 100vh;
     position: relative;
 }
 
 .circle {
-
     border-radius: 50%;
     position: absolute;
     z-index: -1;
+    animation: float 5s ease-in-out infinite;
 }
 
-.c1 {
-    background: linear-gradient(to right, var(--pink) , #58245B);
+.c1, .c2, .c3 {
+    background: linear-gradient(to right, var(--pink), #58245B);
     width: 100px;
     height: 100px;
-    right: 10px;
-    top: 265px;
-    z-index: -30;
 }
 
 .c2 {
-    background: linear-gradient(to right, var(--purple) , #291B41);
+    background: linear-gradient(to right, var(--purple), #291B41);
     width: 90px;
     height: 90px;
     left: 25px;
@@ -70,41 +58,36 @@ body {
 }
 
 .c3 {
-    background: linear-gradient(to right, var(--blue) , #10122E);
+    background: linear-gradient(to right, var(--blue), #10122E);
     width: 80px;
     height: 80px;
     right: 35px;
     bottom: 35px;
 }
-.bot{
+
+.bot {
     font-size: 40px;
-    background: linear-gradient(to right,#BB4DC1 0% , #9249B4 10%, #9249B4 20%,#39247D 40%,#333A94 50%, #2AF9FE 120%);
+    background: linear-gradient(to right, #BB4DC1, #9249B4, #333A94, #2AF9FE);
     background-clip: text;
     -webkit-text-fill-color: transparent;
-  margin-top: 30px;
+    margin-top: 30px;
+    animation: fadeIn 2s ease-in-out;
 }
+
 #title {
-     padding-top:70px ;}
-
-.P{
-    padding: 20px 20px;
+    padding-top: 70px;
 }
 
-.link{
-    background:linear-gradient(to bottom,#1b008935 , #060022 ) ;
+.P, .link, .go, .open, .note {
     padding: 20px;
-    border-radius: 8px 8px 0px 0px; 
-        padding: 25px; }
-#link{
-    padding-top: 20px;
 }
-#open{
-    padding-top: 20px;
-}
+
 .link {
     position: relative;
-    border-radius: 8px 8px 0px 0px;
-    
+    border-radius: 8px 8px 0 0;
+    background: linear-gradient(to bottom, #1b008935, #060022);
+    padding: 25px;
+    animation: fadeIn 1.5s ease-in-out;
 }
 
 .link::before {
@@ -115,102 +98,98 @@ body {
     right: 0;
     bottom: 0;
     border-radius: inherit;
-    padding: 1px; /* Adjust the padding to control the border thickness */
-    background: linear-gradient(to bottom,var(--white) , #060022 );
-    mask: 
-        linear-gradient(#fff 0 0) content-box, 
-        linear-gradient(#fff 0 0);
+    padding: 1px;
+    background: linear-gradient(to bottom, var(--white), #060022);
+    mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
     -webkit-mask-composite: destination-out;
     mask-composite: exclude;
     z-index: -1;
 }
-.go{
-    padding: 60px 50px 20px 50px;
 
-}
-.open{
+.open {
     width: 230px;
     padding: 15px;
     font-size: 16px;
     border-radius: 12px;
-    font-family: 'aldrich';
     border: none;
-    background:linear-gradient(to bottom,var(--blue) , #10122E ) ;
+    background: linear-gradient(to bottom, var(--blue), #10122E);
     color: var(--light-green);
-    cursor:pointer;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.note{
-    padding: 50px; 
-    font-size: x-small;
 
+.open:hover {
+    transform: scale(1.05);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
-.menu{
-    position: absolute;
-   
-}
-.items ul{
+
+.items ul {
     position: fixed;
     display: flex;
-     background-color: #faf9f624;
+    background-color: #faf9f624;
     width: 97%;
     height: 50px;
-    bottom: 0px;
+    bottom: 0;
     margin: 5px;
-    justify-content:space-around ;
+    justify-content: space-around;
     border-radius: 8px;
     align-items: center;
-
-    
-
 }
-@media(min-width:767px){
-    .items{
+
+@media(min-width: 767px) {
+    .items {
         margin: 15px;
         width: 96%;
-
     }
 }
-.items i{
+
+.items i {
     font-size: 30px;
     color: var(--purple);
+    transition: color 0.3s ease;
 }
-.items a{
-    color: var(--purple);
 
-}
-.items a:checked{
-    color: var(--purple);
-}
-.items i:hover{
+.items i:hover {
     color: var(--white);
 }
-ul li{
+
+ul li {
     list-style: none;
-}
-ul:hover li{
-    opacity: .6;
-    filter: blur(2px);
-}
- 
-ul li:hover{
-    opacity: 1;
-    filter:blur(0px);
-}
-.bi-wallet-fill{
-    color: var(--white) !important;
+    transition: opacity 0.3s ease, filter 0.3s ease;
 }
 
-.clipboard{
-    padding: 5px;
-    cursor: pointer;
-    vertical-align: middle;
-    margin-left: 5px;
- 
+ul:hover li {
+    opacity: 0.6;
+    filter: blur(2px);
 }
-.copy-message{
+
+ul li:hover {
+    opacity: 1;
+    filter: blur(0px);
+}
+
+.copy-message {
     margin-top: 10px;
     font-size: 14px;
     color: var(--pink);
-    position:sticky;
+    position: sticky;
+    animation: fadeIn 1s ease-in-out;
+}
 
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-20px);
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
