--- a/template/wallet page/wallet.html
+++ b/template/wallet page/wallet.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="/wallet page/wallet.css">
+    <link rel="stylesheet" href="../wallet page/wallet.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <div class="nav">
         <div class="logo">
-            <img src="/img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
+            <img src="../img/_f3aced6d-129f-4ffe-9077-3f35cb33f860.jpeg" alt="logo">
         </div>
     </div>
     <div class="main">
@@ -33,7 +33,7 @@
         <div id="link">
             <span class="link">
                 <span id="walletCode">646675566565655663</span>
-                <span id="copyButton" onclick="copyCode()" class="clipboard"><img src="/img/clipboard.png" alt="copy"></span>
+                <span id="copyButton" onclick="copyCode()" class="clipboard"><img src="../img/clipboard.png" alt="copy"></span>
             </span>
             <p id="copyMessage" class="copy-message"></p>
         </div>
@@ -47,16 +47,16 @@
      <div class="menu">
         <div class="items">
             <ul>
-           <li> <a href="/tasks/tasks.html" title="tasks"><i class="bi bi-patch-check-fill"></i></a></li>
-           <li> <a href="/nfts page/nfts.html" title="nft"><i class="bi bi-ui-checks-grid"></i></a></li>
-           <li><a href="/home page/home.html" title="home"><i class="bi bi-house-fill"></i></a> </li>
-           <li><a href="/invite page/invite.html" title="invits"><i class="bi bi-people-fill"></i></a></li>
+           <li> <a href="../tasks/tasks.html" title="tasks"><i class="bi bi-patch-check-fill"></i></a></li>
+           <li> <a href="../nfts page/nfts.html" title="nft"><i class="bi bi-ui-checks-grid"></i></a></li>
+           <li><a href="../home page/home.html" title="home"><i class="bi bi-house-fill"></i></a> </li>
+           <li><a href="../invite page/invite.html" title="invits"><i class="bi bi-people-fill"></i></a></li>
            <li><a href="" title="wallet" ><i class="bi bi-wallet-fill"></i></a></li>
         </ul>
         </div>
     </div>
     </div>
-   <script src="/wallet page/wallet.js"></script>
+   <script src="../wallet page/wallet.js"></script>
 </body>
 
 </html>
